--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                     
                     <!-- Mitspieler Punkte -->
                     <div class="dashboard-card mitspieler-card">
-                        <h3>Mitspieler</h3>
+                        <h3>Mitspieler Punkte</h3>
                         <div id="mitspieler-list" class="mitspieler-list">
                             <p>Lade Mitspieler...</p>
                         </div>
